[VAS-1101] feat: introduced dynamic validation for template data, based on content retrieved from table storage
